[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem0-mcp-server"
version = "0.1.0"
description = "MCP server for Mem0 memory storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mem0-mcp-server = "mem0_mcp_server:run"
